name:                nominatim
version:             0.1.0.0
synopsis:            Haskell Nominatim API Client
description:         Haskell Nominatim API Client
license:             MIT
license-file:        LICENSE
author:              Christopher Reichert
maintainer:          creichert07@gmail.com
copyright:           (c) 2015 Christopher Reichert
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Nominatim
  default-language:    Haskell2010
  build-depends:       base        >=4.7
                     , aeson       >=0.8
                     , bytestring  >=0.10
                     , text        >=1.2
                     , http-client >=0.4
                     , wreq        >=0.4
                     , lens        >=4.9
                     , lens-aeson  >=1.0


executable nominatim
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      ""
  build-depends:       base                 == 4.*
                     , bytestring           >=0.10
                     , text                 >= 1.2
                     , optparse-applicative
                     , nominatim
